06-resources/compute.tf
resource "aws_instance" "web" {
  ami                         = "ami-0030e4319cbf4dbf2"
  associate_public_ip_address = true
  instance_type               = "t2.micro"

  subnet_id = aws_subnet.public.id
  # root_block_device {
  #   # delete_on_termination = true
  #   volume_size           = 10
  #   # volume_type           = "gp2"
  # }
  depends_on = [ aws_subnet.public ]
}
# resource "proxmox_vm_qemu" "debian-1" {
#   name        = "debian-1"
#   target_node = "proxmox"
#   clone       = "debian-micro-cloud"
#   full_clone  = true
#   agent       = 1

#   startup_shutdown {
#     order = -1
#     startup_delay = -1
#     shutdown_timeout = -1
#   }

#   lifecycle {
#     create_before_destroy = true
#     ignore_changes = [ tags ]
#   }

#   memory = 512
#   cpu {
#     cores   = 1
#     sockets = 1
#     type    = "host"
#   }
#   scsihw = "virtio-scsi-pci"

#   disks {
#     scsi {
#       scsi0 {
#         disk {
#           size      = "10G"
#           storage   = "local-lvm"
#           replicate = true
#         }
#       }
#     }
#     ide {
#       ide0 {
#         cloudinit {
#           storage = "local-lvm"
#         }
#       }
#     }
#   }

#   network {
#     id     = 0
#     model  = "virtio"
#     bridge = "vmbr0"
#   }
#   skip_ipv6 = true
#   serial {
#     id   = 0
#     type = "socket"
#   }

#   os_type    = "cloud-init"
#   ipconfig0  = "ip=dhcp"
#   ciuser     = "debian"
#   cipassword = "debianpass"
#   sshkeys    = <<EOF
#   ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDHHG3BLUoyf0pOXJjxgW8vKx07nyqOzeIkbigBouihikFm9DG4H905xRk4a/5mOOGHc1SSiJfwAvDlk23/cqErbb13A8LQyow5Dvtxf56I+4qcSBF7OtAY1EbI27ektaa5I//KX4vaAlhAYt7CXFByyKHo4znA9jftJLDKtR/C7eG4p7iMYnrwDneBrMmhwTK1xW7t5qymbbjFuvizKbUnxb62OeFzOb743J+QJx8Vzf7e2twLbqTaZK8vk+nMFRAW/le0cL04Z+Mf7VbC1qV5m9zGPB2IG/jyGZQ20IkSOCRw4eeOAYamvjoqUIY2H3jnNUsDRGjHk+577XI6aubxbsL2M2h8fCYbTI73mF9CO/7+kkEL9k2jLyC6KdJ+ymqpOKewJtWwUeU/3/z/IgTLi0XKDyH6u8NdUs15axRb3T0Ux/NpdFZdJYdtJwY+Xum2ohDaO9Sx [...]
#   EOF
# }

# output "vm_info" {
#   value = {
#     "ip" = proxmox_vm_qemu.debian-1.default_ipv4_address
#     "name" = proxmox_vm_qemu.debian-1.name
#     "vmid" = proxmox_vm_qemu.debian-1.id
#     "state" = proxmox_vm_qemu.debian-1.vm_state
#   }
# }
